<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_title_detail"
                        style="@style/TextHeader"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/linear_layout_created_at_detail"
                        app:layout_constraintWidth_default="spread"
                        tools:text="2.x: Performance improvements dsfsd (tracking issue)" />

                    <LinearLayout
                        android:id="@+id/linear_layout_created_at_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical"
                        app:layout_constraintLeft_toRightOf="@id/text_title_item"
                        app:layout_constraintRight_toRightOf="parent">

                        <TextView
                            style="@style/TextLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/issue_created_at" />

                        <TextView
                            android:id="@+id/text_created_at_detail"
                            style="@style/TextLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="17.08.2018\n23:56" />

                    </LinearLayout>

                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/text_body_detail"
                    style="@style/TextUsual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    tools:text="I assembled a fresh evaluation of RxJava 1, 2 and Reactor 3.2 performance under various usages and found the following deficiencies in RxJava 2." />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/issue_creator"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/image_avatar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@mipmap/ic_launcher" />

                        <TextView
                            android:id="@+id/text_login"
                            style="@style/TextUsual"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            tools:text="akarnokd" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_labels"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/issue_labels"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/text_empty_label"
                            style="@style/TextUsual"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:padding="4dp"
                            android:text="@string/msg_no_labels" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    style="@style/TextHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/issue_comments"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_comments"
                    style="@style/TextUsual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>